--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_CLOUDINARY_CLOUD_NAME = dyfbat8wu
 REACT_APP_ADMIN_SECRET_KEY=Adinesh
-REACT_APP_BACKEND_URL=http://localhost:5000/api
+REACT_APP_BACKEND_URL=https://agro-backend-f0tq.onrender.com/api
